# xkcd-cli

./: .gitignore  Changelog.md  Readme.md  pyproject.toml  requirements-dev.txt  requirements.txt  xkcd.py
.github/workflows/: lint-sca.yaml  publish.yaml
xkcd_cli/: iv.py  iv_test.py  xkcd.py
