[tool.poetry]
name = "dcs-xkcd-cli"
version = "0.1.1"
description = "Get your daily dose of xkcd directly from the terminal! 🤩"
authors = ["dotcs <repositories@dotcs.me>"]
readme = "Readme.md"
license = "MIT"
keywords = ["cli", "cli-app", "xkcd", "xkcd-comics"]
homepage = "https://github.com/dotcs/xkcd-cli"
repository = "https://github.com/dotcs/xkcd-cli"
include = [
    "LICENSE",
]

packages = [
    {include = "xkcd_cli"}
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11"
requests = "^2.27"
typer = "^0.4"

[tool.poetry.dev-dependencies]
black = "^22.3"
pyright = "^1.1"

[tool.poetry.scripts]
xkcd = "xkcd_cli.xkcd:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
